image overflow fixed + comment organized

--- a/flaskblog/static/home.css
+++ b/flaskblog/static/home.css
@@ -34,7 +34,8 @@ body{
 .blog-grids .grid {
     background-color: #fff;
     width: calc(33% - 30px);
-    height: 700px;
+    max-height: 500px;
+    overflow: hidden;
     float: left;
     padding: 15px;
     margin: 20px 15px 15px;
@@ -42,6 +43,7 @@ body{
     -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     display: inline-block;
+
 }
 
 
@@ -89,19 +91,28 @@ body{
     position: relative;
 }
 
-.read-more-date a {
+/*.read-more-date a {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-size: 1.06667rem;
     font-weight: 600;
     color: #41516a;
     text-transform: uppercase;
-}
+}*/
 
 .read-more-date .date {
     position: absolute;
     right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 30px 0;
     color: #90949a;
+    background-image: linear-gradient(to bottom, transparent, black);
 }
 
-
+#blog-content {
+    height: 20%;
+}
