--- a/flaskblog/static/style.css
+++ b/flaskblog/static/style.css
@@ -33,6 +33,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 20px;
 }
 
+p {
+  overflow: auto;
+}
+
 .article-title {
   font-size: 30px;
   font-family: "Open Sans";
